# lifx-app

./: .eslintrc.json  .prettierrc  README.md  angular.json  extra-webpack.config.js  index.code-workspace  jest.config.js  nx.json  package.json  rustfmt.toml  tsconfig.base.json
apps/back-end/: Cargo.toml
apps/back-end/src/: ipc.rs  main.rs
apps/back-end/src/ipc/: mod.rs  parse.rs  types.rs
apps/main/: .eslintrc.json  jest.config.js  tsconfig.app.json  tsconfig.editor.json  tsconfig.json
apps/main/src/: main.ts
apps/main/src/app/: app.ts  constants.ts  ipc.ts
apps/main/src/environments/: environment.mock.ts  environment.prod.ts  environment.ts
apps/renderer/: .eslintrc.json  jest.config.js  tsconfig.app.json  tsconfig.editor.json  tsconfig.json
apps/renderer-e2e/: .eslintrc.json  cypress.json
apps/renderer-e2e/src/integration/: app.spec.ts
apps/renderer/src/: _theme.scss  _typography.scss  index.html  polyfills.ts  styles.scss  test-setup.ts
apps/renderer/src/@types/: index.d.ts
apps/renderer/src/app/: _app.theme.scss  app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.module.ts  clamp.ts  coerce.decorator.ts  electron.service.ts  forms.interface.ts  (+8 more)
libs/api/: jest.config.js
libs/api/src/: index.ts
libs/math/: jest.config.js
libs/math/src/: index.ts
libs/std/: README.md  jest.config.js
libs/std/src/: index.ts
libs/webgl/: README.md  jest.config.js  tsconfig.lib.json
tools/: .gitignore  generate-schemas.ts
tools/builders/cargo/: builder.json
tools/builders/webgl/: builder.json  package.json
(+68 files in other folders)
